--- a/css/scss/page/_class-temp.scss
+++ b/css/scss/page/_class-temp.scss
@@ -33,11 +33,15 @@
   }
 }
 
-@media screen and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .class-title-wrap {
     margin: 100px 0 40px 0;
     padding: 0px 40px;
     width: 100%;
+
+    h5 {
+      font-size: 16px;
+    }
   }
 
   .class-img-wrap {
