--- a/css/scss/page/_index.scss
+++ b/css/scss/page/_index.scss
@@ -211,7 +211,7 @@
   }
 }
 
-.contact-r {
+.contact-img {
   background: url(../assets/contact.jpg) no-repeat 55% 50%;
   background-size: cover;
 }
