--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -69,8 +69,7 @@ $sp-4: 4px;
 }
 
 .container {
-  width: 90%;
-  // padding: 0 $sp-32;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -106,19 +105,52 @@ $sp-4: 4px;
   display: grid;
 }
 
-@media screen and (min-width: 1440px) {
+//larger desktops
+@media (min-width: 1440.02px) {
   .container {
     max-width: 1500px;
   }
 }
 
-@media screen and (max-width: 767.98px) {
+//large desktops
+@media (max-width: 1440px) {
+  .container {
+    max-width: 1100px;
+  }
+}
+
+//desktops
+@media (max-width: 1199.98px) {}
+
+//tablets
+@media (max-width: 991.98px) {}
+
+//landscape phones
+@media (max-width: 767.98px) {
+  .container {
+    width: calc(100% - 80px);
+  }
+
+  //3欄 -> 2欄
+  .wrap-row {
+    .w-30 {
+      width: 45%;
+    }
+  }
+}
+
+//portrait phones
+@media (max-width: 575.98px) {
+  width: calc(100% - 40px);
+  margin: 0 auto;
+
   .wrap-row {
     flex-flow: column wrap;
 
-    .w-30,
-    .w-40 {
+    //3欄 -> 1欄
+    .w-30 {
       width: 100%;
+      margin: 40 auto;
     }
   }
 }
