--- a/css/common.css
+++ b/css/common.css
@@ -180,7 +180,7 @@ video {
   }
   .wrap-row .w-30 {
     width: 100%;
-    margin: 40 auto;
+    margin: 40px auto;
   }
 }
 
@@ -1145,6 +1145,37 @@ p {
   margin: 250px 0px 0px 0px;
 }
 
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #00000066;
+  z-index: -1;
+  opacity: 0;
+}
+
+.lightbox img {
+  max-height: 80%;
+}
+
+.lightbox:target {
+  opacity: 1;
+  z-index: 1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
 @media (max-width: 767.98px) {
   .display-title {
     display: none;
@@ -1155,13 +1186,40 @@ p {
   .art-wrap {
     margin-bottom: 100px;
   }
+  .art-wrap .w-30,
+  .art-wrap .w-40 {
+    width: 45%;
+  }
   .arts-card-1,
   .arts-card-2,
   .arts-card-3,
-  .arts-card-4,
   .arts-card-5,
   .arts-card-6 {
     margin: 0 auto 40px;
+  }
+  .arts-card-1 p,
+  .arts-card-2 p,
+  .arts-card-3 p,
+  .arts-card-5 p,
+  .arts-card-6 p {
+    font-size: 12px;
+  }
+  .arts-card-4 {
+    margin: -40px auto 40px;
+  }
+  .lightbox img {
+    max-width: 90%;
+    max-height: auto;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .art-wrap .w-30,
+  .art-wrap .w-40 {
+    width: 100%;
+  }
+  .art-wrap .arts-card-4 {
+    margin: 0px auto 40px;
   }
 }
 
