--- a/test.css
+++ b/test.css
@@ -1,24 +1,13 @@
-.photo {
+/* .photo {
   max-width: 30%;
   margin: 0 5px;
   position: relative;
   z-index: 1;
-}
+} */
 
 .thumbnail {
   width: 100%;
 }
-
-/* .arts-card:after {
-  content: "";
-  position: absolute;
-  top: 55%;
-  left: 0;
-  width: 100%;
-  bottom: 0;
-  background: linear-gradient(black 70%, transparent);
-  transform: scale(1.1) rotateX(180deg);
-} */
 
 .lightbox {
   position: absolute;
