--- a/css/scss/page/_classes.scss
+++ b/css/scss/page/_classes.scss
@@ -20,3 +20,47 @@
   background-color: $dark-color;
   z-index: -1;
 }
+
+.track {
+  width: 100%;
+  height: 1400px;
+}
+
+.camera {
+  width: 100vw;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+}
+
+.frame {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  height: 100%;
+  transform: translateX(0);
+  /* animation: HoriScroll 1s linear; */
+}
+
+.item {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+  padding: 35px 50px;
+  margin: 60px;
+  background-color: $secondary-color;
+  width: 500px;
+  height: 600px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  // align-items: center;
+  white-space: normal;
+
+  img {
+    width: 290px;
+    align-self: center;
+    margin: 0 auto;
+  }
+}
