更新img 修改cursor動態

--- a/css/scss/_text.scss
+++ b/css/scss/_text.scss
@@ -13,6 +13,17 @@
 // font-family: 'Roboto', sans-serif; 
 // 300 價格 / copyright / 電話 / email
 
+//font-family
+.noto-sans {
+  font-family: 'Noto Sans JP', sans-serif !important;
+  letter-spacing: 1px;
+}
+
+.roboto {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 1px;
+}
+
 //text-align
 $align-center: center;
 $align-left: left;
@@ -98,11 +109,6 @@ p {
   letter-spacing: 3px;
 }
 
-.roboto {
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 1px;
-}
-
 .caption {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
@@ -143,14 +149,7 @@ p {
   text-align: center;
 }
 
-// .copyright {
-//   position: fixed;
-//   top: 60%;
-//   right: -5%;
-//   transform: rotate(90deg);
-//   z-index: 9;
-// }
-
+//copyright
 .left-fixed {
   position: fixed;
   right: 20px;
@@ -165,6 +164,13 @@ p {
     width: 100vh;
     font-size: 12px;
   }
+}
+
+.copyright-footer {
+  margin: 0 0 0 5%;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 12px;
+  color: #999;
 }
 
 @media screen and (max-width: 575.98px) {
