--- a/css/common.css
+++ b/css/common.css
@@ -184,6 +184,16 @@ video {
   }
 }
 
+.noto-sans {
+  font-family: 'Noto Sans JP', sans-serif !important;
+  letter-spacing: 1px;
+}
+
+.roboto {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 1px;
+}
+
 .align-center {
   text-align: center;
 }
@@ -264,11 +274,6 @@ p {
   letter-spacing: 3px;
 }
 
-.roboto {
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 1px;
-}
-
 .caption {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
@@ -319,6 +324,13 @@ p {
   position: absolute;
   width: 100vh;
   font-size: 12px;
+}
+
+.copyright-footer {
+  margin: 0 0 0 5%;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 12px;
+  color: #999;
 }
 
 @media screen and (max-width: 575.98px) {
@@ -833,6 +845,22 @@ p {
   top: 50%;
   margin: -25px 0 0 -25px;
   pointer-events: none;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  -webkit-transition-property: background, -webkit-transform;
+  transition-property: background, -webkit-transform;
+  transition-property: background, transform;
+  transition-property: background, transform, -webkit-transform;
+  -webkit-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+  z-index: -1;
+}
+
+.link-grow {
+  -webkit-transform: scale(2);
+          transform: scale(2);
+  -webkit-filter: hue-rotate(180deg);
+          filter: hue-rotate(180deg);
 }
 
 .hero-section {
@@ -979,58 +1007,24 @@ p {
   z-index: -1;
 }
 
-.class-container {
-  margin-top: 200px;
-  margin-left: 200px;
-}
-
-.index-class-wrap {
-  margin-left: 5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-.class-card {
-  padding: 32px;
-  margin-right: 64px;
-  width: 560px;
-  height: 700px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
-}
-
-.class-card img {
-  width: 60%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.class-card h6 {
-  margin-top: 24px;
-}
-
 .contact-section {
   margin: 120px 0;
 }
 
+.index-contact-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
 .contact-l {
+  width: 40%;
   color: #3C363B;
   position: relative;
   overflow: hidden;
@@ -1042,28 +1036,26 @@ p {
   right: 0px;
 }
 
-.contact-l .text {
-  margin-left: 20%;
-  margin-top: 100px;
+.contact-l .text-wrap {
+  margin: 100px 0 0 15%;
 }
 
-.contact-l h1 {
+.contact-l .text-wrap h1 {
   margin-bottom: 20px;
 }
 
-.contact-l p {
+.contact-l .text-wrap p {
   margin-bottom: 20px;
 }
 
-.contact-l .label a {
+.contact-l .text-wrap .info-box a {
+  padding: 6px 0px;
   display: block;
-  font-weight: 400;
   line-height: 1.5;
   color: #3C363B;
-  margin-bottom: -10px;
 }
 
-.contact-l .follow-box {
+.contact-l .text-wrap .info-box .follow-box {
   margin: 40px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1076,20 +1068,17 @@ p {
           align-items: center;
 }
 
-.contact-l .follow-box span {
-  padding-top: 6px;
+.contact-l .text-wrap .info-box .follow-box .ig {
+  margin: 5px 15px 0px 40px;
 }
 
-.contact-l .follow-box .ig {
-  margin-left: 40px;
-  margin-right: 15px;
-}
-
-.contact-l .follow-box .fb {
-  margin-left: 10px;
+.contact-l .text-wrap .info-box .follow-box .fb {
+  margin: 5px 15px 0px 10px;
 }
 
 .contact-img {
+  width: 60%;
+  height: 400px;
   background: url(../assets/contact.jpg) no-repeat 55% 50%;
   background-size: cover;
 }
@@ -1384,7 +1373,7 @@ p {
 
 .track {
   width: 100%;
-  height: 1400px;
+  height: 2000px;
 }
 
 .camera {
@@ -1426,16 +1415,7 @@ p {
   background-color: #E6DFD9;
   width: 500px;
   height: 600px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  position: relative;
   white-space: normal;
 }
 
@@ -1444,7 +1424,7 @@ p {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin: 0 auto;
+  margin: 20px 50px;
 }
 
 .class-title-wrap {
@@ -1524,10 +1504,6 @@ p {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-}
-
-.contact-section .contact-wrap .contact-l {
-  width: 40%;
 }
 
 .contact-section .contact-wrap .contact-r {
