--- a/css/scss/_cursor.scss
+++ b/css/scss/_cursor.scss
@@ -56,4 +56,14 @@
   // 讓他真的置中
   margin: -25px 0 0 -25px;
   pointer-events: none;
+
+  transition: all 1s ease;
+  transition-property: background, transform;
+  transform-origin: 100% 100%;
+  z-index: -1;
+}
+
+.link-grow {
+  transform: scale(2);
+  filter: hue-rotate(180deg);
 }
