--- a/css/scss/page/_classes.scss
+++ b/css/scss/page/_classes.scss
@@ -23,7 +23,7 @@
 
 .track {
   width: 100%;
-  height: 1400px;
+  height: 2000px;
 }
 
 .camera {
@@ -52,15 +52,17 @@
   background-color: $secondary-color;
   width: 500px;
   height: 600px;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
+  position: relative;
+  // display: flex;
+  // flex-flow: column wrap;
+  // justify-content: space-between;
   // align-items: center;
   white-space: normal;
+  // transform: translateY(-50%);
 
   img {
     width: 290px;
     align-self: center;
-    margin: 0 auto;
+    margin: 20px 50px;
   }
 }
