--- a/css/scss/page/_index.scss
+++ b/css/scss/page/_index.scss
@@ -117,101 +117,71 @@
   }
 }
 
-//class
-.class-container {
-  margin-top: 200px;
-  margin-left: 200px;
-}
-
-.index-class-wrap {
-  margin-left: 5%;
-  display: flex;
-  justify-content: flex-start;
-}
-
-// class-card
-.class-card {
-  padding: $sp-32;
-  margin-right: $sp-64;
-  width: 560px;
-  height: 700px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-
-  img {
-    width: 60%;
-    align-items: center;
-    align-self: center;
-  }
-
-  h6 {
-    margin-top: $sp-24;
-  }
-}
 
 //contact
 .contact-section {
   margin: 120px 0;
 }
 
+.index-contact-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
 .contact-l {
+  width: 40%;
   color: $dark-color;
   position: relative;
   overflow: hidden;
 
+  //title
   h2 {
     position: absolute;
     z-index: -1;
     right: 0px;
   }
 
-  .text {
-    margin-left: 20%;
-    margin-top: 100px;
-  }
+  .text-wrap {
+    margin: 100px 0 0 15%;
 
-  h1 {
-    margin-bottom: 20px;
-  }
-
-  p {
-    margin-bottom: 20px;
-  }
-
-  .label {
-    a {
-      display: block;
-      font-weight: 400;
-      line-height: 1.5;
-      color: $dark-color;
-      margin-bottom: -10px;
-    }
-  }
-
-  .follow-box {
-    margin: 40px 0px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-    span {
-      padding-top: 6px;
+    h1 {
+      margin-bottom: 20px;
     }
 
-    .ig {
-      margin-left: 40px;
-      margin-right: 15px;
+    p {
+      margin-bottom: 20px;
     }
 
-    .fb {
-      margin-left: 10px;
+    .info-box {
+      a {
+        padding: 6px 0px;
+        display: block;
+        line-height: 1.5;
+        color: $dark-color;
+      }
+
+      .follow-box {
+        margin: 40px 0px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        .ig {
+          margin: 5px 15px 0px 40px;
+        }
+
+        .fb {
+          margin: 5px 15px 0px 10px;
+        }
+      }
     }
   }
 }
 
 .contact-img {
+  width: 60%;
+  height: 400px;
   background: url(../assets/contact.jpg) no-repeat 55% 50%;
   background-size: cover;
 }
