新增生活陶內容頁

--- a/css/common.scss
+++ b/css/common.scss
@@ -12,6 +12,7 @@
 @import "./scss/page/index";
 @import "./scss/page/arts";
 @import "./scss/page/works";
+@import "./scss/page/work-temp";
 @import "./scss/page/classes";
 @import "./scss/page/class-temp";
 @import "./scss/page/contact";
