--- a/css/common.css
+++ b/css/common.css
@@ -1333,6 +1333,156 @@ p {
   }
 }
 
+.work-detail-wrap {
+  margin: 120px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.work-img-wrap {
+  margin: 0 30px 0 0;
+  width: 60%;
+}
+
+.work-slider-viewport {
+  width: 100%;
+  height: 75%;
+  position: relative;
+  overflow: hidden;
+}
+
+.work-slider-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  font-size: 0;
+  line-height: 0;
+}
+
+.work-slider-img {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+
+.work-slider-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.work-single-page {
+  margin: -30px 10px 10px 0;
+  width: 60px;
+  height: 60px;
+  border: 2px solid #E6DFD9;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+
+.work-info-wrap {
+  margin: 0 0 0 30px;
+  width: 32%;
+}
+
+.work-info-wrap .work-info-title {
+  margin: 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.work-info-wrap .dilver {
+  margin: 20px 0;
+  width: 50px;
+  height: 1px;
+  background-color: #6C4D41;
+}
+
+.work-info-wrap table {
+  margin: 20px 0;
+}
+
+.work-info-wrap table tr td {
+  padding: 8px 20px 8px 0;
+}
+
+.work-info-wrap .work-btnbox {
+  margin: 0 0 0 0;
+  padding: 30px;
+  background-color: #f9f9f9;
+}
+
+.work-info-wrap .work-btnbox .amount {
+  margin-bottom: 30px;
+}
+
+.work-info-wrap .work-btnbox a {
+  margin-bottom: 10px;
+}
+
+.amount span {
+  margin-right: 30px;
+}
+
+.value-button {
+  display: inline-block;
+  border: none;
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+input#number {
+  text-align: center;
+  border: none;
+  margin: 0px;
+  width: 80px;
+  height: 40px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .class-hero {
   margin: 100px auto;
   display: -webkit-box;
