--- a/css/scss/page/_work-temp.scss
+++ b/css/scss/page/_work-temp.scss
@@ -3,14 +3,128 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+}
 
-  .work-img-wrap {
-    margin: 0 0px 0 0;
-    width: 50%;
+.work-img-wrap {
+  margin: 0 30px 0 0;
+  width: 60%;
+}
+
+.work-slider-viewport {
+  width: 100%;
+  height: 75%;
+  position: relative;
+  overflow: hidden;
+}
+
+.work-slider-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  font-size: 0;
+  line-height: 0;
+}
+
+.work-slider-img {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+
+.work-slider-page {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+}
+
+.work-single-page {
+  margin: -30px 10px 10px 0;
+  width: 60px;
+  height: 60px;
+  border: 2px solid $secondary-color;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+
+.work-info-wrap {
+  margin: 0 0 0 30px;
+  width: 32%;
+
+  .work-info-title {
+    margin: 10px 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
   }
 
-  .work-info-wrap {
-    margin: 0 0 0 0px;
-    width: 40%;
+  .dilver {
+    margin: 20px 0;
+    width: 50px;
+    height: 1px;
+    background-color: $primary-color;
   }
+
+  table {
+    margin: 20px 0;
+
+    tr {
+      td {
+        padding: 8px 20px 8px 0;
+      }
+    }
+  }
+
+  .work-btnbox {
+    margin: 0 0 0 0;
+    padding: 30px;
+    background-color: #f9f9f9;
+
+    .amount {
+      margin-bottom: 30px;
+    }
+
+    a {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.amount {
+  span {
+    margin-right: 30px;
+  }
+}
+
+
+.value-button {
+  display: inline-block;
+  border: none;
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
+  user-select: none;
+}
+
+input#number {
+  text-align: center;
+  border: none;
+  margin: 0px;
+  width: 80px;
+  height: 40px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
