--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -26,9 +26,9 @@
     //上方連結
     .menu-link-wrap {
       .menulink {
-        margin: 10px 0px;
-        padding: 10px 0;
-        display: block;
+        margin: 20px 0px;
+        padding: 20px 0;
+        // display: inline-block;
         font-family: 'Noto Serif TC', serif;
         font-size: 32px;
         letter-spacing: 8px;
