--- a/css/scss/_root.scss
+++ b/css/scss/_root.scss
@@ -42,3 +42,24 @@ img,
 video {
   max-width: 100%;
 }
+
+.loading-screen {
+  position: relative;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  background-color: $secondary-color-dark;
+  width: 0%;
+  height: 100%;
+}
+
+.load-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 10;
+  pointer-events: none;
+}
