--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,27 @@ video {
   max-width: 100%;
 }
 
+.loading-screen {
+  position: relative;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  background-color: #EDDEDA;
+  width: 0%;
+  height: 100%;
+}
+
+.load-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 10;
+  pointer-events: none;
+}
+
 .primary-color {
   color: #6C4D41;
 }
@@ -676,8 +697,7 @@ p {
 
 .menu-section .menu-content .menu-link-wrap .menulink {
   margin: 10px 0px;
-  padding: 10px 0;
-  display: block;
+  padding: 20px 0;
   font-family: 'Noto Serif TC', serif;
   font-size: 32px;
   letter-spacing: 8px;
@@ -1722,6 +1742,11 @@ input[type=number]::-webkit-outer-spin-button {
   outline: none;
 }
 
+.labelup {
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+}
+
 select {
   font-family: 'Noto Serif TC', serif;
   font-size: 16px;
@@ -1825,4 +1850,4 @@ select {
     margin: 10px;
   }
 }
-/*# sourceMappingURL=common.css.map */
+/*# sourceMappingURL=main.css.map */
