--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Noto Serif JP', serif;
   line-height: 1;
   color: #6C4D41;
+  cursor: none;
 }
 
 main {
@@ -1740,11 +1741,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .input :focus {
   outline: none;
-}
-
-.labelup {
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
 }
 
 select {
