--- a/css/scss/_root.scss
+++ b/css/scss/_root.scss
@@ -13,7 +13,7 @@ body {
   font-family: 'Noto Serif JP', serif;
   line-height: 1;
   color: $primary-color;
-  // cursor: none;
+  cursor: none;
 }
 
 main {
