--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -22,6 +22,7 @@
 .btn-primary-outline {
   border: 1px solid $primary-color;
   color: $primary-color;
+  transition: all 800ms ease-in-out 0s;
 
   &:hover {
     background-color: $primary-color;
@@ -32,6 +33,7 @@
 .btn-secondary-outline {
   border: 1px solid $secondary-color;
   color: $secondary-color;
+  transition: all 800ms ease 0s;
 
   &:hover {
     background-color: $secondary-color;
