--- a/css/scss/_cursor.scss
+++ b/css/scss/_cursor.scss
@@ -43,8 +43,8 @@
 // }
 
 #ball {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   background: none;
   background: $secondary-color;
   opacity: 50%;
@@ -56,14 +56,15 @@
   // 讓他真的置中
   margin: -25px 0 0 -25px;
   pointer-events: none;
-
   transition: all 1s ease;
   transition-property: background, transform;
-  transform-origin: 100% 100%;
-  z-index: -1;
+  z-index: 99;
+
 }
 
 .link-grow {
-  transform: scale(2);
+  // background-color: $dark-color;
+  transform: scale(2.5);
   filter: hue-rotate(180deg);
+  mix-blend-mode: difference;
 }
