--- a/css/scss/_menu.scss
+++ b/css/scss/_menu.scss
@@ -25,10 +25,16 @@
 
     //上方連結
     .menu-link-wrap {
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: space-between;
+
       .menulink {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: auto;
         margin: 10px 0px;
-        padding: 20px 0;
-        // display: inline-block;
+        padding: 10px 0;
         font-family: 'Noto Serif TC', serif;
         font-size: 32px;
         letter-spacing: 8px;
