--- a/css/scss/_navbar.scss
+++ b/css/scss/_navbar.scss
@@ -29,10 +29,33 @@
         justify-content: flex-end;
 
         .nav-item {
+          padding: 16px 30px;
 
           .navlink {
-            padding: 16px 30px;
+            position: relative;
+            overflow: hidden;
             letter-spacing: 2px;
+
+            &.active {
+              font-weight: 400;
+              border-bottom: 1px solid $primary-color;
+            }
+
+            .underline {
+              margin-top: 6px;
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: $primary-color;
+              transition: 400ms;
+              transition-timing-function: ease-out;
+            }
+
+            &:hover {
+              .underline {
+                width: 100%;
+              }
+            }
           }
         }
       }
