--- a/css/scss/page/_contact.scss
+++ b/css/scss/page/_contact.scss
@@ -35,8 +35,7 @@
 }
 
 //input
-.input-string,
-.input-textarea {
+.input-string {
   position: relative;
 }
 
@@ -46,11 +45,16 @@
   color: $dark-color;
   border: 1px solid $dark-color;
   border-width: 0 0 1px 0;
-  // 取消focus時的藍色框
-  outline: none;
 
-  :focus {
+  // 取消focus時的藍色框
+  &:focus {
     outline: none;
+
+    &+.input-label {
+      transform: translateY(-30px);
+      opacity: 70%;
+      font-size: 14px;
+    }
   }
 }
 
@@ -68,9 +72,10 @@ select {
   top: 8px;
   left: 8px;
   pointer-events: none;
+  transition: all 300ms ease-out 0s;
 }
 
-.input-textarea-input {
+.input-textarea {
   padding: 12px;
   width: 100%;
   color: $dark-color;
@@ -78,11 +83,13 @@ select {
   border-width: 0 0 1px 0;
   resize: none;
   outline: none;
-}
 
-.input-textarea {
-  label {
-    top: 0px
+  &:focus {
+    &+.input-label {
+      transform: translateY(-30px);
+      opacity: 70%;
+      font-size: 14px;
+    }
   }
 }
 
