--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 @import "./scss/footer";
 @import "./scss/menu";
 @import "./scss/cursor";
-
+@import "./scss/slider";
 //page
 @import "./scss/page/index";
 @import "./scss/page/arts";
