--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -89,4 +89,10 @@
     top: 30%;
     right: 0px;
   }
+
+  // &:hover {
+  //   &::after {
+  //     transform: translate3d(42px, 0, 0);
+  //   }
+  // }
 }
