--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,16 @@ p {
   color: #999;
 }
 
+@media (max-width: 767.98px) {
+  h2 {
+    font-size: 96px;
+  }
+}
+
 @media screen and (max-width: 575.98px) {
+  h2 {
+    font-size: 48px;
+  }
   .left-fixed {
     right: 0px;
     text-align: center;
@@ -938,7 +947,7 @@ p {
 }
 
 .slider-img {
-  height: 600px;
+  max-height: 600px;
   overflow: hidden;
 }
 
@@ -990,6 +999,10 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1029,10 +1042,14 @@ p {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   margin: 180px 0;
 }
 
-.about-section .about-l {
+.about-l {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1049,24 +1066,31 @@ p {
   overflow: hidden;
 }
 
-.about-section .about-l .titlebox {
+.about-l .titlebox {
   display: inline-block;
   width: auto;
 }
 
-.about-section .about-r {
+.about-r {
   margin-left: 50px;
 }
 
-.about-section .about-r p {
+.about-r p {
   margin-top: 20px;
 }
 
-.about-section .about-r .ab-imgbox {
+.ab-imgbox {
   margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
 }
 
-.about-section .about-r .ab-imgbox img {
+.ab-imgbox img {
   margin-right: 20px;
 }
 
@@ -1137,6 +1161,10 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1203,6 +1231,100 @@ p {
   height: 400px;
   background: url(../assets/contact.jpg) no-repeat 55% 50%;
   background-size: cover;
+}
+
+@media (max-width: 767.98px) {
+  .about-section {
+    margin: 60px 0;
+  }
+  .about-l {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .about-r {
+    width: 90%;
+  }
+  .about-r .ab-imgbox {
+    margin-top: 40px;
+  }
+  .works-section {
+    margin: 80px 0;
+  }
+  .works-section .index-works-wrap .index-works-card.left {
+    margin-top: 90px;
+    margin-left: -60px;
+  }
+  .works-section .index-works-wrap .index-works-card.right {
+    margin-top: 90px;
+    margin-right: -60px;
+  }
+  .arts-section {
+    margin-bottom: 40px;
+  }
+  .arts-section .art-l,
+  .arts-section .art-r {
+    width: 100%;
+  }
+  .arts-section .art-l h4,
+  .arts-section .art-r h4 {
+    font-size: 24px;
+    line-height: 1.75;
+  }
+  .contact-section {
+    margin-top: 0;
+  }
+  .index-contact-wrap {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+  }
+  .index-contact-wrap .contact-l {
+    width: 100%;
+  }
+  .index-contact-wrap .contact-img {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .hero-section {
+    padding: 90px 0 0 0;
+  }
+  .hero-section .w-35 {
+    display: none;
+  }
+  .hero-section .w-65 {
+    width: 100%;
+    padding-left: 0px;
+  }
+  .hero-section .w-65 img {
+    margin-right: 0px;
+  }
+  .w-70 {
+    width: 90%;
+  }
+  .ab-imgbox {
+    width: 100%;
+  }
+  .ab-imgbox img {
+    width: 45%;
+  }
+  .works-section {
+    margin: 40px 0;
+  }
+  .works-section .index-works-wrap .index-works-card.left {
+    margin-top: 40px;
+    margin-left: -20px;
+  }
+  .works-section .index-works-wrap .index-works-card.right {
+    margin-top: 40px;
+    margin-right: -20px;
+  }
 }
 
 .display-title {
@@ -1425,7 +1547,7 @@ p {
   }
 }
 
-@media screen and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .work-banner {
     height: 500px;
   }
