--- a/css/scss/page/_index.scss
+++ b/css/scss/page/_index.scss
@@ -2,6 +2,7 @@
 .hero-section {
   padding: 90px 5% 0px 5%;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
 
   .w-35 {
@@ -29,35 +30,38 @@
 .about-section {
   display: flex;
   justify-content: flex-start;
+  flex-flow: row wrap;
   margin: 180px 0;
+}
 
-  .about-l {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    overflow: hidden;
+.about-l {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  overflow: hidden;
 
-    .titlebox {
-      display: inline-block;
-      width: auto;
-    }
+  .titlebox {
+    display: inline-block;
+    width: auto;
   }
+}
 
-  .about-r {
-    margin-left: 50px;
+.about-r {
+  margin-left: 50px;
 
-    p {
-      margin-top: 20px;
-    }
+  p {
+    margin-top: 20px;
+  }
+}
 
-    .ab-imgbox {
-      margin-top: 60px;
+.ab-imgbox {
+  margin-top: 60px;
+  display: flex;
+  flex-flow: row nowrap;
 
-      img {
-        margin-right: 20px;
-      }
-    }
+  img {
+    margin-right: 20px;
   }
 }
 
@@ -125,6 +129,7 @@
 
 .index-contact-wrap {
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: stretch;
 }
@@ -184,4 +189,119 @@
   height: 400px;
   background: url(../assets/contact.jpg) no-repeat 55% 50%;
   background-size: cover;
+}
+
+@media (max-width: 767.98px) {
+  .about-section {
+    margin: 60px 0;
+  }
+
+  .about-l {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .about-r {
+    width: 90%;
+
+    .ab-imgbox {
+      margin-top: 40px;
+    }
+  }
+
+  .works-section {
+    margin: 80px 0;
+
+    .index-works-wrap {
+      .index-works-card.left {
+        margin-top: 90px;
+        margin-left: -60px;
+      }
+
+      .index-works-card.right {
+        margin-top: 90px;
+        margin-right: -60px;
+      }
+    }
+  }
+
+  .arts-section {
+    margin-bottom: 40px;
+
+    .art-l,
+    .art-r {
+      width: 100%;
+
+      h4 {
+        font-size: 24px;
+        line-height: 1.75;
+      }
+    }
+  }
+
+  .contact-section {
+    margin-top: 0;
+  }
+
+  .index-contact-wrap {
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+
+    .contact-l {
+      width: 100%;
+    }
+
+    .contact-img {
+      width: 100%;
+    }
+  }
+
+}
+
+@media screen and (max-width: 575.98px) {
+  .hero-section {
+    padding: 90px 0 0 0;
+
+    .w-35 {
+      display: none;
+    }
+
+    .w-65 {
+      width: 100%;
+      padding-left: 0px;
+
+      img {
+        margin-right: 0px;
+      }
+    }
+  }
+
+  .w-70 {
+    width: 90%;
+  }
+
+  .ab-imgbox {
+    width: 100%;
+
+    img {
+      width: 45%;
+    }
+  }
+
+  .works-section {
+    margin: 40px 0;
+
+    .index-works-wrap {
+      .index-works-card.left {
+        margin-top: 40px;
+        margin-left: -20px;
+      }
+
+      .index-works-card.right {
+        margin-top: 40px;
+        margin-right: -20px;
+      }
+    }
+  }
 }
