--- a/css/components/_button.scss
+++ b/css/components/_button.scss
@@ -1,53 +1,47 @@
 // button & tag
 .btn {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px 0;
   display: block;
-  font-family: 'Noto Sans TC', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  text-align: center;
-}
+  font: {
+    family: $noto-zh;
+    size: 14px;
+    weight: $light;
+  }
+  text-align: $align-center;
 
-.btn-primary {
-  background-color: $primary-color;
-  color: $secondary-color;
-}
-
-.btn-secondary {
-  background-color: $secondary-color;
-  color: $primary-color;
-}
-
-.btn-primary-outline {
-  border: 1px solid $primary-color;
-  color: $primary-color;
-  transition: all 800ms ease-in-out 0s;
-
+  &-primary {
+    background-color: $primary-color;
+    color: $secondary-color;
+  }
+  &-secondary {
+    background-color: $secondary-color;
+    color: $primary-color;
+  }
+  &-primary-outline {
+    border: 1px solid $primary-color;
+    color: $primary-color;
+    transition: all 800ms ease-in-out 0s;
+  }
   &:hover {
     background-color: $primary-color;
     color: $secondary-color;
   }
-}
-
-.btn-secondary-outline {
-  border: 1px solid $secondary-color;
-  color: $secondary-color;
-  transition: all 800ms ease 0s;
-
+  &-secondary-outline {
+    border: 1px solid $secondary-color;
+    color: $secondary-color;
+    transition: all 800ms ease 0s;
+  }
   &:hover {
     background-color: $secondary-color;
     color: $primary-color;
   }
+//======= tag =======
 }
-
 .tag {
   margin-left: 10px;
   padding: 4px 8px;
   border-radius: 4px;
 }
-
-
 //more
 .btn-more {
   margin: 10px 20px 0px 0px;
@@ -56,11 +50,13 @@
   display: inline-block;
   position: relative;
   border-bottom: 1px solid $primary-color;
-  font-family: 'Noto Serif TC', serif;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 2px;
+  font: {
+    family: 'Noto Serif TC', serif;
+    size: $fs * 1.6;
+    weight: $medium;
+  }
   line-height: 1;
+  letter-spacing: 2px;
   color: $dark-color;
 
   //arrow-line
@@ -75,7 +71,6 @@
     right: 0px;
     transition: all 0.3s ease;
   }
-
   //triangle
   &::after {
     content: "";
@@ -89,10 +84,4 @@
     top: 30%;
     right: 0px;
   }
-
-  // &:hover {
-  //   &::after {
-  //     transform: translate3d(42px, 0, 0);
-  //   }
-  // }
 }
