--- a/css/components/_slider.scss
+++ b/css/components/_slider.scss
@@ -1,19 +1,14 @@
 .slider-wrapper {
   position: relative;
 }
-
 .slider-img {
   max-height: 600px;
   overflow: hidden;
 }
-
 .slider-control-wrap {
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  @include absolute( auto, 0, 0, auto );
   transform: translate3d(calc(100% + 48px), 0, 0);
 }
-
 .arrow-wrap {
   display: flex;
   flex-flow: row nowrap;
@@ -22,25 +17,20 @@
   .arrowbox {
     margin: 0px 20px 20px 0px;
     padding: 15px 0;
-    width: 50px;
-    height: 50px;
+    @include box-size(50px, 50px);
     border-radius: 50%;
     text-align: center;
-
-    // vertical-align: baseline;
     &.focus {
       background-color: $secondary-color;
     }
   }
 }
-
 .slider-number {
   .roboto.number {
     margin: 0px 20px 0px 0px;
     color: $secondary-color;
   }
-
-  .roboto.number.active {
+  &.active {
     color: $dark-color;
   }
 }
