--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -9,7 +8,6 @@ body {
   font-family: 'Noto Serif JP', serif;
   line-height: 1;
   color: #6C4D41;
-  cursor: none;
 }
 
 main {
@@ -22,7 +20,7 @@ ul {
   padding: 0px;
 }
 
-li {
+ul li {
   list-style-type: none;
   margin: 0px;
 }
@@ -31,7 +29,6 @@ a {
   font-size: 14px;
   text-decoration: none;
   color: #6C4D41;
-  cursor: none;
 }
 
 img,
@@ -39,25 +36,122 @@ video {
   max-width: 100%;
 }
 
-.loading-screen {
-  position: relative;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  background-color: #EDDEDA;
-  width: 0%;
-  height: 100%;
+.noto-sans {
+  font-size: 16px;
+  font-family: "Noto Sans JP", sans-serif;
+  letter-spacing: 1px;
 }
 
-.load-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  z-index: 10;
-  pointer-events: none;
+.roboto {
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 1px;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-left {
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
+}
+
+h1 {
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 8px;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Noto Serif Display", serif;
+  font-size: 144px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 10px;
+  text-align: center;
+  color: #F5F5F5;
+}
+
+h3 {
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 8px;
+}
+
+h4 {
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 2;
+  letter-spacing: 8px;
+}
+
+h5 {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.75;
+  letter-spacing: 4px;
+}
+
+h6 {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 5px;
+}
+
+p {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 2;
+  letter-spacing: 1px;
+}
+
+.price-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 3px;
+}
+
+.caption {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 1;
+}
+
+.label {
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  line-height: 1.5;
+}
+
+@media (max-width: 767.98px) {
+  h2 {
+    font-size: 96px;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  h2 {
+    font-size: 48px;
+  }
 }
 
 .primary-color {
@@ -85,7 +179,7 @@ video {
 }
 
 .mx--24 {
-  margin: 0 -24px;
+  margin: -24px;
 }
 
 .w-30 {
@@ -129,10 +223,6 @@ video {
   width: 100%;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .wrap-row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -153,23 +243,6 @@ video {
           flex-flow: column wrap;
 }
 
-.between {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.align-center {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.grid {
-  display: -ms-grid;
-  display: grid;
-}
-
 @media (min-width: 1440.02px) {
   .container {
     max-width: 1500px;
@@ -185,6 +258,7 @@ video {
 @media (max-width: 767.98px) {
   .container {
     width: calc(100% - 80px);
+    margin: 0 auto;
   }
   .wrap-row .w-30 {
     width: 45%;
@@ -192,8 +266,9 @@ video {
 }
 
 @media (max-width: 575.98px) {
-  width: calc(100% - 40px);
-  margin: 0 auto;
+  .container {
+    width: calc(100% - 40px);
+  }
   .wrap-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -206,111 +281,6 @@ video {
   }
 }
 
-.noto-sans {
-  font-family: 'Noto Sans JP', sans-serif !important;
-  letter-spacing: 1px;
-}
-
-.roboto {
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: 1px;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.align-left {
-  text-align: left;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0px;
-}
-
-h1 {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  line-height: 1;
-  text-align: center;
-  letter-spacing: 8px;
-}
-
-h2 {
-  font-family: 'Noto Serif Display', serif;
-  font-size: 144px;
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: 10px;
-  color: #F5F5F5;
-  text-align: center;
-}
-
-h3 {
-  font-size: 48px;
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: 8px;
-}
-
-h4 {
-  font-size: 36px;
-  font-weight: 300;
-  line-height: 2;
-  letter-spacing: 8px;
-}
-
-h5 {
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 1.75;
-  letter-spacing: 4px;
-}
-
-h6 {
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: 5px;
-}
-
-p {
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 2;
-  letter-spacing: 1px;
-}
-
-.price-text {
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: 3px;
-}
-
-.caption {
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
-  font-weight: 300;
-  line-height: 1;
-}
-
-.label {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 1.5;
-  letter-spacing: 2px;
-}
-
 .titlebox {
   margin-bottom: 64px;
   width: 100%;
@@ -320,9 +290,9 @@ p {
 .titlebox h1 {
   position: absolute;
   top: auto;
-  right: 0%;
-  left: 0%;
+  right: 0;
   bottom: 20px;
+  left: 0;
 }
 
 .sub-title {
@@ -333,15 +303,18 @@ p {
 
 .left-fixed {
   position: fixed;
+  top: auto;
   right: 20px;
+  bottom: auto;
+  left: auto;
   padding: 8px;
   text-align: center;
-  z-index: 99;
+  z-index: 20;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
 }
 
-.left-fixed .copyright {
+.copyright {
   display: block;
   position: absolute;
   width: 100vh;
@@ -350,29 +323,13 @@ p {
 
 .copyright-footer {
   margin: 0 0 0 5%;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   font-size: 12px;
   color: #999;
 }
 
-@media (max-width: 767.98px) {
-  h2 {
-    font-size: 96px;
-  }
-}
-
 @media screen and (max-width: 575.98px) {
-  h2 {
-    font-size: 48px;
-  }
-  .left-fixed {
-    right: 0px;
-    text-align: center;
-    z-index: 99;
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
-  .left-fixed .copyright {
+  .copyright {
     display: block;
     position: absolute;
     width: 100vh;
@@ -381,12 +338,11 @@ p {
 }
 
 .btn {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 12px 0;
   display: block;
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 }
 
@@ -407,7 +363,7 @@ p {
   transition: all 800ms ease-in-out 0s;
 }
 
-.btn-primary-outline:hover {
+.btn:hover {
   background-color: #6C4D41;
   color: #E6DFD9;
 }
@@ -419,7 +375,7 @@ p {
   transition: all 800ms ease 0s;
 }
 
-.btn-secondary-outline:hover {
+.btn:hover {
   background-color: #E6DFD9;
   color: #6C4D41;
 }
@@ -440,8 +396,8 @@ p {
   font-family: 'Noto Serif TC', serif;
   font-size: 16px;
   font-weight: 500;
-  letter-spacing: 2px;
   line-height: 1;
+  letter-spacing: 2px;
   color: #3C363B;
 }
 
@@ -470,6 +426,163 @@ p {
   margin-top: -1px;
   top: 30%;
   right: 0px;
+}
+
+.cursor {
+  margin: -7px 0 0 -7px;
+  width: 14px;
+  height: 14px;
+  pointer-events: none;
+  background: url(../assets/cursor.svg) no-repeat;
+  background-size: cover;
+  position: absolute;
+  z-index: 999;
+}
+
+.--grow {
+  -webkit-transform: scale(4);
+          transform: scale(4);
+}
+
+.wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+}
+
+.outer1 {
+  margin: -30px 0 0 -30px;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  background: url(../assets/outer.svg) center no-repeat;
+  -webkit-animation-name: spin1;
+          animation-name: spin1;
+  -webkit-animation-duration: 5000ms;
+          animation-duration: 5000ms;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  pointer-events: none;
+  z-index: 999;
+}
+
+.outer2 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url(../assets/outer.svg) center no-repeat;
+  -webkit-animation-name: spin1;
+          animation-name: spin1;
+  -webkit-animation-duration: 5000ms;
+          animation-duration: 5000ms;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  pointer-events: none;
+}
+
+@-webkit-keyframes spin1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin2 {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes spin2 {
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+.slider-wrapper {
+  position: relative;
+}
+
+.slider-img {
+  max-height: 600px;
+  overflow: hidden;
+}
+
+.slider-control-wrap {
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: auto;
+  -webkit-transform: translate3d(calc(100% + 48px), 0, 0);
+          transform: translate3d(calc(100% + 48px), 0, 0);
+}
+
+.arrow-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.arrow-wrap .arrowbox {
+  margin: 0px 20px 20px 0px;
+  padding: 15px 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.arrow-wrap .arrowbox.focus {
+  background-color: #E6DFD9;
+}
+
+.slider-number .roboto.number {
+  margin: 0px 20px 0px 0px;
+  color: #E6DFD9;
+}
+
+.slider-number.active {
+  color: #3C363B;
 }
 
 .navbar {
@@ -576,125 +689,6 @@ p {
 @media screen and (max-width: 767.98px) {
   .navbar-collapse {
     display: none !important;
-  }
-}
-
-.footer {
-  padding: 64px 0px;
-  background-color: #F9F9F9;
-}
-
-.footer .container-footer {
-  width: 90%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.footer .container-footer a {
-  display: block;
-  padding: 8px 0;
-  color: #3C363B;
-  letter-spacing: 2px;
-}
-
-.footer .container-footer .brandbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.footer .container-footer .brandbox .follow-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footer .container-footer .brandbox .follow-box .ig {
-  margin-left: 40px;
-  margin-right: 15px;
-  line-height: 1;
-}
-
-.footer .container-footer .brandbox .follow-box .fb {
-  margin-left: 10px;
-  line-height: 1;
-}
-
-.footer .container-footer .brandbox h4 {
-  font-family: 'Cormorant Garamond';
-  font-size: 54px;
-  font-weight: 400;
-  line-height: 1;
-  letter-spacing: 0px;
-  margin-bottom: 20px;
-}
-
-@media screen and (max-width: 767.98px) {
-  .footer {
-    padding: 30px 0px;
-  }
-  .footer .container-footer .sitemap {
-    display: block;
-    width: 20%;
-  }
-  .footer .container-footer .info-box {
-    display: block;
-    width: 70%;
-  }
-  .footer .container-footer .brandbox {
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-flow: column wrap !important;
-            flex-flow: column wrap !important;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin-top: 40px;
-    width: 100%;
-  }
-  .footer .container-footer .brandbox .follow-box {
-    margin-left: -20px;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-  }
-  .footer .container-footer .brandbox h4 {
-    font-size: 54px;
-  }
-  .footer .container-footer .brandbox p {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
   }
 }
 
@@ -901,97 +895,123 @@ p {
   }
 }
 
-.cursor-wrap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
-  z-index: 100;
-  pointer-events: none;
+.footer {
+  padding: 64px 0px;
+  background-color: #F9F9F9;
 }
 
-#ball {
-  width: 40px;
-  height: 40px;
-  background: none;
-  background: #E6DFD9;
-  opacity: 50%;
-  border-radius: 50%;
-  /* absoulute才能讓js指定他的xy */
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -25px 0 0 -25px;
-  pointer-events: none;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-  -webkit-transition-property: background, -webkit-transform;
-  transition-property: background, -webkit-transform;
-  transition-property: background, transform;
-  transition-property: background, transform, -webkit-transform;
-  z-index: 99;
-}
-
-.link-grow {
-  -webkit-transform: scale(2.5);
-          transform: scale(2.5);
-  -webkit-filter: hue-rotate(180deg);
-          filter: hue-rotate(180deg);
-  mix-blend-mode: difference;
-}
-
-.slider-wrapper {
-  position: relative;
-}
-
-.slider-img {
-  max-height: 600px;
-  overflow: hidden;
-}
-
-.slider-control-wrap {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  -webkit-transform: translate3d(calc(100% + 48px), 0, 0);
-          transform: translate3d(calc(100% + 48px), 0, 0);
-}
-
-.arrow-wrap {
+.footer .container-footer {
+  width: 90%;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.footer .container-footer a {
+  display: block;
+  padding: 8px 0;
+  color: #3C363B;
+  letter-spacing: 2px;
+}
+
+.footer .container-footer .brandbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.footer .container-footer .brandbox .follow-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.arrow-wrap .arrowbox {
-  margin: 0px 20px 20px 0px;
-  padding: 15px 0;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  text-align: center;
+.footer .container-footer .brandbox .follow-box .ig {
+  margin-left: 40px;
+  margin-right: 15px;
+  line-height: 1;
 }
 
-.arrow-wrap .arrowbox.focus {
-  background-color: #E6DFD9;
+.footer .container-footer .brandbox .follow-box .fb {
+  margin-left: 10px;
+  line-height: 1;
 }
 
-.slider-number .roboto.number {
-  margin: 0px 20px 0px 0px;
-  color: #E6DFD9;
+.footer .container-footer .brandbox h4 {
+  font-family: 'Cormorant Garamond';
+  font-size: 54px;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: 0px;
+  margin-bottom: 20px;
 }
 
-.slider-number .roboto.number.active {
-  color: #3C363B;
+@media screen and (max-width: 767.98px) {
+  .footer {
+    padding: 30px 0px;
+  }
+  .footer .container-footer .sitemap {
+    display: block;
+    width: 20%;
+  }
+  .footer .container-footer .info-box {
+    display: block;
+    width: 70%;
+  }
+  .footer .container-footer .brandbox {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-flow: column wrap !important;
+            flex-flow: column wrap !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin-top: 40px;
+    width: 100%;
+  }
+  .footer .container-footer .brandbox .follow-box {
+    margin-left: -20px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer .container-footer .brandbox h4 {
+    font-size: 54px;
+  }
+  .footer .container-footer .brandbox p {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .hero-section {
@@ -1394,7 +1414,7 @@ p {
       -ms-flex-align: center;
           align-items: center;
   background-color: #00000066;
-  z-index: -1;
+  z-index: 2;
   opacity: 0;
 }
 
@@ -1526,7 +1546,7 @@ p {
   margin: 10px 0px 10px 0px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media (max-width: 1199.98px) {
   .work-banner {
     height: 500px;
   }
