--- a/css/pages/_works.scss
+++ b/css/pages/_works.scss
@@ -61,7 +61,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media (max-width: 1199.98px) {
   .work-banner {
     height: 500px;
   }
